fix ie layout issues

--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -10,6 +10,7 @@ body {
   color: $base;
   background-color: $white;
   height: 100%;
+  min-height: 100%;
 
   @include breakpoint($desk) {
     background-color: $background;
